--- a/S4/tsai_eva6_assignment4.ipynb
+++ b/S4/tsai_eva6_assignment4.ipynb
@@ -39,21 +39,28 @@
         "class BaseBlock(nn.Module):\n",
         "    def __init__(self, cin, cout, skip_conn):\n",
         "        super(BaseBlock, self).__init__()\n",
+        "        # boolean on whether to use skip connections.\n",
         "        self.skip_conn = skip_conn\n",
+        "\n",
+        "        # convolution layers.\n",
         "        self.conv1 = self.conv_block(c_in=cin, c_out=cout, kernel_size=3, stride=1, padding=1)\n",
         "        self.conv2 = self.conv_block(c_in=cout, c_out=cout, kernel_size=3, stride=1, padding=1)\n",
         "\n",
+        "        # dropout and relu layers.\n",
         "        self.drop = nn.Dropout2d(0.1)\n",
         "        self.relu = nn.ReLU()\n",
         "\n",
         "    def forward(self, x):\n",
+        "        # store initial input for later use\n",
         "        og = x\n",
         "\n",
+        "        # 2 convolution operations\n",
         "        x = self.conv1(x)\n",
         "        x = self.relu(x)\n",
         "        x = self.drop(x)\n",
         "        x = self.conv2(x)\n",
         "\n",
+        "        # if boolean is true, add skip conection.\n",
         "        if self.skip_conn:\n",
         "            x += og\n",
         "        \n",
@@ -98,22 +105,22 @@
         "        self.drop = nn.Dropout2d(0.1)\n",
         "\n",
         "    def forward(self, x):\n",
-        "        x = self.conv1(x) # out: 8 x 28 x 28, rf: 1\n",
-        "        x = self.conv2(x) # out: 8 x 28 x 28, rf: 3\n",
+        "        x = self.conv1(x) # out: 8 x 28 x 28, rf: 5\n",
+        "        x = self.conv2(x) # out: 16 x 28 x 28, rf: 9\n",
         "        \n",
-        "        x = self.pool(x) # out: 8 x 14 x 14, rf: 14\n",
+        "        x = self.pool(x) # out: 8 x 14 x 14, rf: 18\n",
         "        \n",
-        "        x = self.conv3(x) # out: 8 x 28 x 28, rf: 5\n",
-        "        x = self.conv4(x) # out: 8 x 28 x 28, rf: 7\n",
+        "        x = self.conv3(x) # out: 16 x 28 x 28, rf: 22\n",
+        "        x = self.conv4(x) # out: 16 x 28 x 28, rf: 26\n",
         "\n",
-        "        x = self.pool(x) # out: 8 x 14 x 14, rf: 14\n",
+        "        x = self.pool(x) # out: 16 x 14 x 14, rf: 52\n",
         "        \n",
-        "        x = self.conv5(x) # out: 8 x 28 x 28, rf: 7\n",
-        "        x = self.conv6(x) # out: 8 x 28 x 28, rf: 7\n",
+        "        x = self.conv5(x) # out: 16 x 28 x 28, rf: 56\n",
+        "        x = self.conv6(x) # out: 16 x 28 x 28, rf: 60\n",
         "\n",
-        "        x = self.gap(x)\n",
-        "        x = x.squeeze()\n",
-        "        x = self.fc(x)\n",
+        "        x = self.gap(x) # out: 16 x 1 x 1\n",
+        "        x = x.squeeze() # out: 16\n",
+        "        x = self.fc(x) # out: 10\n",
         "        \n",
         "        return F.log_softmax(x)\n",
         "\n",
@@ -128,79 +135,6 @@
         "        return seq_block"
       ],
       "execution_count": 88,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "h_Cx9q2QFgM7"
-      },
-      "source": [
-        "# class Net(nn.Module):\n",
-        "#     def __init__(self):\n",
-        "#         super(Net, self).__init__()\n",
-        "#         self.conv1 = self.conv_block(c_in=1, c_out=8, kernel_size=5, stride=1, padding=2)\n",
-        "#         self.conv2 = self.conv_block(c_in=8, c_out=8, kernel_size=3, stride=1, padding=1)\n",
-        "#         self.conv3 = self.conv_block(c_in=8, c_out=8, kernel_size=3, stride=1, padding=1)\n",
-        "#         self.conv4 = self.conv_block(c_in=8, c_out=8, kernel_size=3, stride=1, padding=1)\n",
-        "        \n",
-        "#         self.conv5 = self.conv_block(c_in=8, c_out=16, kernel_size=5, stride=1, padding=2)\n",
-        "#         self.conv6 = self.conv_block(c_in=16, c_out=16, kernel_size=3, stride=1, padding=1)\n",
-        "#         self.conv7 = self.conv_block(c_in=16, c_out=16, kernel_size=3, stride=1, padding=1)\n",
-        "#         self.conv8 = self.conv_block(c_in=16, c_out=16, kernel_size=3, stride=1, padding=1)\n",
-        "        \n",
-        "#         self.conv9 = self.conv_block(c_in=16, c_out=16, kernel_size=3, stride=1, padding=1)\n",
-        "#         self.conv10 = self.conv_block(c_in=16, c_out=32, kernel_size=3, stride=1, padding=1)\n",
-        "\n",
-        "        \n",
-        "\n",
-        "#         self.fc = nn.Linear(32, 10)\n",
-        "        \n",
-        "#         self.gap = nn.AvgPool2d(7)\n",
-        "#         self.pool = nn.MaxPool2d(2, 2)\n",
-        "#         self.drop = nn.Dropout2d(0.1)\n",
-        "\n",
-        "#     def forward(self, x):\n",
-        "#         x1 = self.conv1(x) # out: 8 x 28 x 28, rf: 1\n",
-        "#         x2 = self.drop(x1)\n",
-        "#         x2 = self.conv2(x2) # out: 8 x 28 x 28, rf: 3\n",
-        "#         x3 = self.drop(x2)\n",
-        "#         x3 = self.conv3(x3) # out: 8 x 28 x 28, rf: 5\n",
-        "#         x4 = self.drop(x3) + x1\n",
-        "#         x4 = self.conv4(x4) + x2 # out: 8 x 28 x 28, rf: 7\n",
-        "\n",
-        "#         x = self.pool(x) # out: 8 x 14 x 14, rf: 14\n",
-        "\n",
-        "#         x = self.conv5(x) # out: 16 x 14 x 14, rf: 16\n",
-        "#         x = self.drop(x)\n",
-        "#         x = self.conv6(x) # out: 16 x 14 x 14, rf: 18\n",
-        "#         x = self.drop(x)\n",
-        "#         x = self.conv7(x) # out: 32 x 7 x 7, rf: 38\n",
-        "#         x = self.drop(x)\n",
-        "#         x = self.conv8(x) # out: 32 x 7 x 7, rf: 38\n",
-        "        \n",
-        "#         x = self.pool(x) # out: 16 x 7 x 7, rf: 36\n",
-        "        \n",
-        "#         x = self.conv9(x) # out: 32 x 7 x 7, rf: 38\n",
-        "#         x = self.conv10(x) # out: 32 x 7 x 7, rf: 40\n",
-        "\n",
-        "#         x = self.gap(x)\n",
-        "#         x = x.squeeze()\n",
-        "#         x = self.fc(x)\n",
-        "        \n",
-        "#         return F.log_softmax(x)\n",
-        "\n",
-        "\n",
-        "#     def conv_block(self, c_in, c_out, **kwargs):\n",
-        "#         seq_block = nn.Sequential(\n",
-        "#             nn.Conv2d(in_channels=c_in, out_channels=c_out, **kwargs),\n",
-        "#             nn.BatchNorm2d(num_features=c_out),\n",
-        "#             nn.ReLU()\n",
-        "#         )\n",
-        "        \n",
-        "#         return seq_block"
-      ],
-      "execution_count": 89,
       "outputs": []
     },
     {
